src/test/deca/syntax/valid/provided/Visibility.deca
// DESCRIPTION: visibilité des champs d'une classe
class alpha{
	protected int a;
	protected float b = 1;
	float c;
	int d = 1;
}
