src/test/deca/syntax/invalid/provided/instanceof_invalid.deca
class test{
  protected float a = 1.6;

  }
{
boolean c ;
 c = A instanceof null ;
}
